[gd_scene load_steps=5 format=2]

[ext_resource path="res://Environment/Blocks/Forest/Platforms/Breaking Platform/Normal/Normal 720p.png" type="Texture" id=1]
[ext_resource path="res://Environment/Blocks/Forest/Platforms/Breaking Platform/BreakablePlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 615, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 616, 13 )

[node name="StaticBody2D" type="StaticBody2D" groups=["destructable"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 14 )
shape = SubResource( 1 )
one_way_collision = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 14 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
